--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
     <head>
@@ -46,7 +47,7 @@
                             <li><a href="/SecondChance/ViewItems">VIEW ITEMS</a>
                             </li>
 
-                            <li><a href="#price-sec">NEW ITEM</a>
+                            <li><a href="/SecondChance/NewItem.html">NEW ITEM</a>
                             </li>
                             
                             <li><a href="#contact-sec">FAVOURITE ITEMS</a>
