--- a/web/NewItem.html
+++ b/web/NewItem.html
@@ -72,7 +72,7 @@
                     <div class="col-md-12 col-sm-12">
                         <div class="forms">
                             <p id="formNewItemP">ADD A NEW ITEM</p>
-                            <form name="Datos" method="POST" action="NewItemServlet">
+                            <form name="Datos" method="POST" action="NewItem">
                                 <label for="categorySelect">Category:</label> &nbsp;
                                 <select id="categorySelect" name="categorySelect" size="1" required>
                                     <option>BOOKS</option>
